// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card is rendered 1`] = `
.emotion-14 {
  margin: 1rem;
}

.emotion-15 {
  border-radius: 0.25rem;
  background-color: white;
}

.emotion-2 {
  border-radius: 0.25rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-0 {
  border-radius: 0.25rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  width: 100%;
  height: 12rem;
  object-fit: cover;
}

.emotion-6 {
  font-size: 1.25rem;
  line-height: 1.4;
  margin-bottom: 0.75rem;
}

.emotion-4 {
  color: maroon;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  display: inline-block;
  margin-left: 1.4em;
  text-indent: -1.4em;
}

<div
  class="emotion-15 emotion-16"
>
  <a
    href="https://example.com"
    rel="nofollow"
    class="emotion-2 emotion-3"
  >
    <img
      src="https://url_to_img"
      alt="Little Big Burger"
      class="emotion-0 emotion-1"
    />
  </a>
  <div
    class="emotion-14"
  >
    <div
      class="emotion-6 emotion-7"
    >
      <a
        href="https://example.com"
        rel="nofollow"
        class="emotion-4 emotion-5"
      >
        Little Big Burger
      </a>
    </div>
    <p>
      100.00
    </p>
    <address>
      <div>
        <span
          class="emotion-10"
        >
          <span
            role="img"
            aria-label="round pushpin"
          >
            📍
          </span>
          <a
            href="https://url_to_map"
            class="emotion-4 emotion-5"
          >
            123 Main Street
          </a>
        </span>
      </div>
      <div>
        <span
          class="emotion-10"
        >
          <span
            role="img"
            aria-label="phone receiver"
          >
            📞
          </span>
          <a
            href="tel:503-543-2345"
            class="emotion-4 emotion-5"
          >
            503-543-2345
          </a>
        </span>
      </div>
    </address>
  </div>
</div>
`;

exports[`Card w/o phone is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -47,27 +47,8 @@
            >
              123 Main Street
            </a>
          </span>
        </div>
-       <div>
-         <span
-           class=\\"css-1kssyo4-EmojiLabel-EmojiLabel\\"
-         >
-           <span
-             aria-label=\\"phone receiver\\"
-             role=\\"img\\"
-           >
-             📞
-           </span>
-            
-           <a
-             class=\\"css-1l6go11-Link ek86r7m1\\"
-             href=\\"tel:503-543-2345\\"
-           >
-             503-543-2345
-           </a>
-         </span>
-       </div>
      </address>
    </div>
  </div>"
`;

exports[`Card w/o price and phone is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -24,13 +24,10 @@
          rel=\\"nofollow\\"
        >
          Little Big Burger
        </a>
      </div>
-     <p>
-       100.00
-     </p>
      <address>
        <div>
          <span
            class=\\"css-1kssyo4-EmojiLabel-EmojiLabel\\"
          >
@@ -47,27 +44,8 @@
            >
              123 Main Street
            </a>
          </span>
        </div>
-       <div>
-         <span
-           class=\\"css-1kssyo4-EmojiLabel-EmojiLabel\\"
-         >
-           <span
-             aria-label=\\"phone receiver\\"
-             role=\\"img\\"
-           >
-             📞
-           </span>
-            
-           <a
-             class=\\"css-1l6go11-Link ek86r7m1\\"
-             href=\\"tel:503-543-2345\\"
-           >
-             503-543-2345
-           </a>
-         </span>
-       </div>
      </address>
    </div>
  </div>"
`;

exports[`Card w/o price is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -24,13 +24,10 @@
          rel=\\"nofollow\\"
        >
          Little Big Burger
        </a>
      </div>
-     <p>
-       100.00
-     </p>
      <address>
        <div>
          <span
            class=\\"css-1kssyo4-EmojiLabel-EmojiLabel\\"
          >"
`;
